# osmnxelevation

./: .gitattributes  .gitignore  Elevation_Evaluation.ipynb  Midland.gpkg  README.md  edge_network.gpkg  egde_network.dbf  egde_network.gpkg  node_network.gpkg  test.gpkg
.ipynb_checkpoints/: Elevation_Evaluation-checkpoint.ipynb  VIA_Demo-checkpoint.ipynb
Midland/: edges.shp  edges.shx  nodes.dbf  nodes.shp  nodes.shx
Rockford/: edges.shp  edges.shx  nodes.dbf  nodes.shp  nodes.shx
lib/: Demo.ipynb  LICENSE  environment.yml  pyproject.toml
lib/.ipynb_checkpoints/: Demo-checkpoint.ipynb
lib/osmnxelevate/: __init__.py  elevation.py
lib/osmnxelevate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
